fixed symbology issue

--- a/geojsonlayer-socrata-nyc/index.html
+++ b/geojsonlayer-socrata-nyc/index.html
@@ -56,8 +56,8 @@ https://github.com/JimBarry/arcgis-basic-geojsonlayer
         
         // symbol and renderer for the GeoJSON layer
         var sls = new SimpleLineSymbol({
-          color: "green",
-          width: 5
+          color: "red",
+          width: 4
         });
         
         var sr = new SimpleRenderer({
