--- a/add-delete-update-features/index.html
+++ b/add-delete-update-features/index.html
@@ -148,7 +148,7 @@
           yesno = (yesno == "Y") ? "N" : "Y";
          
           // YOU ONLY NEED TO INCLUDE THOSE FIELDS YOU WANT TO EDIT, BUT
-          // YOU MUST INCLUDE THE objectId FIELD SO THAT THE CORRECT FIELD IS EDITED
+          // YOU MUST INCLUDE THE objectId FIELD SO THAT THE CORRECT FEATURE RECORD IS EDITED
           // attributes for new point feature to add
           var attribsToUpdate = {
             objectId: 1,
