--- a/snappointtoline/index.html
+++ b/snappointtoline/index.html
@@ -41,9 +41,8 @@
       geometryEngine, Point, Polyline, SimpleMarkerSymbol,
       SimpleLineSymbol, Graphic, GraphicsLayer, esriConfig) {
 	  
-      // this API Key is configured for Esri's BASEMAPS ONLY, 
-      //no other location services are accessible
-      esriConfig.apiKey = 'AAPK3dbcd91d41ea44278c784dafaf7f77f4aRIhgE9q9TMkJq6EiOxx-QN8-q3X0OBh44FGQMvpHk_fyQflN3_Ikttnn5fu5SUL';
+      // arcgis location services api key
+      esriConfig.apiKey = 'your_api_key_goes_here';
       
 	  // map, mapview, and layers
       var map = new Map({
