--- a/snappointtoline/index.html
+++ b/snappointtoline/index.html
@@ -20,8 +20,9 @@
   <script>
   
     // TEST DATA
-    const ptCoordinate = [-73.78, 40.84];
-    const plPath = [[-74.19, 40.83],[-73.86, 40.76],[-73.81, 40.98],[-73.67, 41.02]];
+    const ptCoordinate = [-73.78, 40.81];
+    const plPath = [[-74.19, 40.83],[-73.86, 40.76],[-73.81, 40.98],
+	                [-73.67, 41.02],[-73.66, 41.08],[-73.86, 41.07]];
     // TEST DATA
 	
     require([
@@ -41,8 +42,9 @@
       geometryEngine, Point, Polyline, SimpleMarkerSymbol,
       SimpleLineSymbol, Graphic, GraphicsLayer, esriConfig) {
 	  
-      // arcgis location services api key
-      esriConfig.apiKey = 'your_api_key_goes_here';
+      // this API Key is configured for Esri's BASEMAPS ONLY, 
+      //no other location services are accessible
+      esriConfig.apiKey = 'AAPK3dbcd91d41ea44278c784dafaf7f77f4aRIhgE9q9TMkJq6EiOxx-QN8-q3X0OBh44FGQMvpHk_fyQflN3_Ikttnn5fu5SUL';
       
 	  // map, mapview, and layers
       var map = new Map({
@@ -122,7 +124,26 @@
           case 'centroid':
             ptSnapped = plSnap.extent.center;
             colorSnapped = '#000000';
-        } // end switch(snaptype)
+			break;
+          case '50along':
+		    // get the length, in map units, of the polyline
+		    var dLength = geometryEngine.geodesicLength(plSnap);
+			// calculate 100th of that length
+			var d100th = dLength / 100;
+			// densify the polyline so that there is no more than 100th
+			// of the polyline's length between each new vertex
+			var plDensified = geometryEngine.geodesicDensify(plSnap, d100th);
+			// count the number of vertices.  this will contain all of
+			// the original vertices plus all the densified vertices
+			var iNumVertices = plDensified.paths[0].length;
+			// find the vertex which is the middle-most vertex
+			var iHalfwayVertex = Math.round(iNumVertices / 2);
+			// return a point that is very close to being the spot 50% along 
+			// the original polyline
+			var ptSnapped = plDensified.getPoint(0, iHalfwayVertex);
+            colorSnapped = '#00cccc';	
+            break;			
+		} // end switch(snaptype)
 
         // make symbol, graphic, then draw to the map
         var symSnapPoint = new SimpleMarkerSymbol({
@@ -155,6 +176,8 @@
         function() {snapPointToLine(plToSnapTo, ptToSnapWith, 'first')};
       document.getElementById('btnSnapToCentroid').onclick =
         function() {snapPointToLine(plToSnapTo, ptToSnapWith, 'centroid')};
+      document.getElementById('btnSnapTo50Along').onclick =
+        function() {snapPointToLine(plToSnapTo, ptToSnapWith, '50along')};
       document.getElementById('btnClearSnapPoints').onclick =
         function() {clearSnapPoints()};
 		
@@ -165,11 +188,24 @@
 
 <body>
   <div>
-    <button class="btn" id="btnSnapToClosestVertex">Snap To Closest Vertex</button>
-    <button class="btn" id="btnSnapToClosestEdge">Snap to Closest Edge</button>
-    <button class="btn" id="btnSnapToFirstVertex">Snap to First Vertex</button>
-    <button class="btn" id="btnSnapToCentroid">Snap to Centroid</button>
-    <button class="btn" id="btnClearSnapPoints">Clear Snap Points</button>
+    <button class="btn" style="color:#008800" id="btnSnapToClosestVertex">
+	  Snap To Vertex
+	</button>
+    <button class="btn" style="color:#ff0000" id="btnSnapToClosestEdge">
+	  Snap to Edge
+	</button>
+    <button class="btn" style="color:#0000ff" id="btnSnapToFirstVertex">
+	  Snap to Origin
+	</button>
+    <button class="btn" style="color:#000000" id="btnSnapToCentroid">
+	  Snap to Centroid
+	</button>
+    <button class="btn" style="color:#00cccc" id="btnSnapTo50Along">
+	  Snap to ~50% Along
+	</button>
+  </div>
+  <div>
+    <button class="btn" id="btnClearSnapPoints">CLEAR ALL</button>
   </div>
   <div id="viewDiv"></div>
 </body>
