--- a/snappointtoline/reorder-and-snap.html
+++ b/snappointtoline/reorder-and-snap.html
@@ -48,9 +48,8 @@
       geometryEngine, Point, Multipoint, Polyline,
       SimpleMarkerSymbol, SimpleLineSymbol, Graphic, GraphicsLayer,
       esriConfig) {
-      // this API Key is configured for Esri's BASEMAPS ONLY, 
-      //no other location services are accessible
-      esriConfig.apiKey = 'AAPK3dbcd91d41ea44278c784dafaf7f77f4aRIhgE9q9TMkJq6EiOxx-QN8-q3X0OBh44FGQMvpHk_fyQflN3_Ikttnn5fu5SUL';
+      // go to developers.arcgis.com to create yourself an api key to activate basemaps
+      esriConfig.apiKey = 'your-api-key-goes-here';
       // map, mapview, and layers
       var map = new Map({
         basemap: "arcgis-light-gray"
