--- a/snappointtoline/reorder-and-snap.html
+++ b/snappointtoline/reorder-and-snap.html
@@ -42,8 +42,7 @@
       "esri/symbols/SimpleLineSymbol",
       "esri/Graphic",
       "esri/layers/GraphicsLayer",
-      "esri/config",
-      "dojo/domReady!"
+      "esri/config"
     ], function(Map, MapView, CoordinateConversion,
       geometryEngine, Point, Multipoint, Polyline,
       SimpleMarkerSymbol, SimpleLineSymbol, Graphic, GraphicsLayer,
